Compiler/tests/bad/Ifs/01_ifs.rs
// if var contexts

fn main(){
    let x : bool = false;
  
    if x || false 
    {
      let y:i32=12;
      println!(12);
    } else {
      println!(y);
    }
    return;
}